{
    "version": 1,
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "MoveActions",
            "id": "871a0571-0db3-4d77-8dce-fe80ad30e6be",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "e1eb1e88-1c5c-4ce7-bf84-9455a0bb88f3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "7a960b5a-25ca-4f92-a885-269f0c1f29b5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "35792957-c77f-4a8b-b646-29437aca0769",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "35f73374-f6d6-4375-8bfd-899db0e4aa5a",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "fbf0ec90-3eb2-4796-9be7-3c3beb95fe86",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "9ccbca27-3829-49ac-ae74-64f60de11d5b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "14fa9c0a-af7b-47cc-81b4-e3de75a9c584",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "9c7dc213-3f67-4774-8025-917b5db7f5e7",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "AttackActions",
            "id": "e4097999-2de8-4fc4-8dbc-70383acc475f",
            "actions": [
                {
                    "name": "Bubble",
                    "type": "Button",
                    "id": "a166b062-b3f0-41e8-bfe1-8af4a4e42370",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Niddle",
                    "type": "Button",
                    "id": "83aa66f2-6eb8-443a-af4a-165eeabc9a57",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "67c5fc5e-824b-4eec-9861-d54f8cf660f5",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Bubble",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "70d6d0c1-5461-4245-abe5-e5042bf6e0e1",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Niddle",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}