using UnityEngine;
using UnityEngine.InputSystem;
using UnityEngine.UI;

public class PlayerShoot : MonoBehaviour
{
    [Header("Shoot")]
    [SerializeField] GameObject bubblePrefab;
    [SerializeField] GameObject niddlePrefab;
    [SerializeField] float bubbleSpeed = 300f;
    [SerializeField] float bubbleCoolTIme = 1.0f;
    [SerializeField] float bubbleCost = 25f;
    [SerializeField] float bubbleFootSpawnOffset = 0.8f;
    [SerializeField] float bubbleMaxGuage = 100.0f;
    [SerializeField] float bubbleCurrentGuage = 100.0f;
    [SerializeField] GameObject bubbleGuageImage;
    [SerializeField] float niddleCoolTime = 0.5f;
    [SerializeField] float niddleSpeed = 1000.0f;

    [Header("Bubble Gun")]
    [SerializeField] Transform bubbleGun;   // í”Œë ˆì´ì–´ ì£¼ë³€ ì›ì„ ë”°ë¼ ë„ëŠ” ë²„ë¸”ê±´

    [SerializeField] float bubbleGunRadius = 1.0f;

    [SerializeField] float jumpDoubleTapTime = 0.25f;

    PlayerInputActions actions;
    GameObject bubble;
    Rigidbody2D bubbleRb;

    float lastBubbleTime = -999f;
    float lastNiddleTime = -999f;

    float lastJumpTapTime = -999f; // ë§ˆì§€ë§‰ ì í”„ ì…ë ¥ ì‹œê°„

    private void Awake()
    {
        actions = new PlayerInputActions();
    }

    private void OnEnable()
    {
        actions.Enable();
        actions.AttackActions.Bubble.performed += FireBubble;
        actions.AttackActions.Bubble.canceled += StopBubble;
        actions.AttackActions.Niddle.performed += FireNiddle;

        // ğŸ”¥ ì í”„(ìŠ¤í˜ì´ìŠ¤) ì…ë ¥ ê°ì§€ - ë”ë¸”íƒ­ìš©
        actions.MoveActions.Jump.performed += OnJumpPerformed;
    }

    private void OnDisable()
    {
        actions.AttackActions.Bubble.performed -= FireBubble;
        actions.AttackActions.Bubble.canceled -= StopBubble;
        actions.AttackActions.Niddle.performed -= FireNiddle;

        actions.MoveActions.Jump.performed -= OnJumpPerformed;
        actions.Disable();
    }

    private void Update()
    {
       
        if (bubbleCurrentGuage < bubbleMaxGuage)
        {
            bubbleCurrentGuage += 10 * Time.deltaTime;
        }

        float ratio = bubbleCurrentGuage / bubbleMaxGuage;
        float snapped = Mathf.Floor(ratio * 4) / 4f;
        bubbleGuageImage.GetComponent<Image>().fillAmount = snapped;

       
        if (bubbleGun != null)
        {
            Vector3 mousePos = Camera.main.ScreenToWorldPoint(Mouse.current.position.ReadValue());
            mousePos.z = 0f;

            Vector2 dir = (mousePos - transform.position).normalized;

            // ì› í…Œë‘ë¦¬ ìœ„ì¹˜ë¡œ ì´ë™
            bubbleGun.position = transform.position + (Vector3)(dir * bubbleGunRadius);

            // ì´êµ¬ê°€ ë§ˆìš°ìŠ¤ë¥¼ ë°”ë¼ë³´ê²Œ íšŒì „(2D ê¸°ì¤€)
            float angle = Mathf.Atan2(dir.y, dir.x) * Mathf.Rad2Deg;
            bubbleGun.rotation = Quaternion.Euler(0, 0, angle - 90f);
        }
    }

   
    void FireBubble(InputAction.CallbackContext ctx)
    {
        if (Time.time < lastBubbleTime + bubbleCoolTIme)
            return;

        if (bubbleCurrentGuage < bubbleCost)
            return;

        bubbleCurrentGuage -= bubbleCost;
        lastBubbleTime = Time.time;

        Vector3 mousePos = Camera.main.ScreenToWorldPoint(Mouse.current.position.ReadValue());
        mousePos.z = 0f;

        Vector2 dir = (mousePos - transform.position).normalized;

        Vector3 spawnPos =
            bubbleGun != null ? bubbleGun.position :
            transform.position;

        SpawnBubble(spawnPos, dir, false);
    }

    void StopBubble(InputAction.CallbackContext ctx)
    {
        if (bubbleRb == null || bubble == null)
            return;
        if (!bubbleRb) return;

        bubbleRb.linearVelocity = Vector2.zero;
        bubbleRb.constraints = RigidbodyConstraints2D.FreezeAll;

        var col = bubble.GetComponent<CircleCollider2D>();
        if (col != null)
            col.isTrigger = false;

        bubbleRb = null;
        bubble = null;
    }


    void FireNiddle(InputAction.CallbackContext ctx)
    {
        if (Time.time < lastNiddleTime + niddleCoolTime)
            return;

        lastNiddleTime = Time.time;

        Vector3 mousePos = Camera.main.ScreenToWorldPoint(Mouse.current.position.ReadValue());
        mousePos.z = 0f;

        Vector2 dir = (mousePos - transform.position).normalized;

        // ğŸ”¥ ë²„ë¸”ê±´ ê¸°ì¤€ ìŠ¤í° ìœ„ì¹˜
        Vector3 spawnPos =
            bubbleGun != null ? bubbleGun.position :
            transform.position;

        // ë‹ˆë“¤ ìƒì„± (ë²„ë¸”ê±´ ìœ„ì¹˜ì—ì„œ)
        GameObject niddle = Instantiate(niddlePrefab, spawnPos, Quaternion.identity);

        // ë‹ˆë“¤ì´ ë§ˆìš°ìŠ¤ë¥¼ ë°”ë¼ë³´ê²Œ íšŒì „
        float angle = Mathf.Atan2(dir.y, dir.x) * Mathf.Rad2Deg - 90f;
        niddle.transform.rotation = Quaternion.Euler(0, 0, angle);

        // ë°œì‚¬
        Rigidbody2D rb = niddle.GetComponent<Rigidbody2D>();
        if (rb != null)
            rb.AddForce(dir * niddleSpeed);
    }


    void OnJumpPerformed(InputAction.CallbackContext ctx)
    {
        float now = Time.time;

        if (now - lastJumpTapTime <= jumpDoubleTapTime)
        {
            FireFootBubble();
            lastJumpTapTime = -999f;
        }
        else
        {
            lastJumpTapTime = now;
        }
    }

    void FireFootBubble()
    {
        if (Time.time < lastBubbleTime + bubbleCoolTIme)
            return;

        if (bubbleCurrentGuage < bubbleCost)
            return;

        bubbleCurrentGuage -= bubbleCost;
        lastBubbleTime = Time.time;

        Vector2 dir = Vector2.down;

        // ë°œ ì•„ë˜ ì› í…Œë‘ë¦¬ ê¸°ì¤€ ìœ„ì¹˜
        Vector3 spawnPos = transform.position + (Vector3)(dir * bubbleGunRadius);

        SpawnBubble(spawnPos, dir, true);
    }

  
    void SpawnBubble(Vector3 spawnPos, Vector2 dir, bool isFootBubble)
    {
        // ë°œ ì•„ë˜ ë²„ë¸”ì€ ì‚´ì§ ë” ì•„ë˜ë¡œ ë³´ì •
        Vector2 finalSpawnPos = isFootBubble
            ? new Vector2(spawnPos.x, spawnPos.y - bubbleFootSpawnOffset)
            : (Vector2)spawnPos;

        bubble = Instantiate(bubblePrefab, finalSpawnPos, Quaternion.identity);
        bubbleRb = bubble.GetComponent<Rigidbody2D>();

        if (bubbleRb == null) return;

        bubbleRb.gravityScale = 0f;

        if (!isFootBubble)
        {
            bubbleRb.linearVelocity = dir * bubbleSpeed;
        }

        if (isFootBubble)
        {
            bubbleRb.constraints = RigidbodyConstraints2D.FreezeAll;
            var col = bubble.GetComponent<CircleCollider2D>();
            if (col != null) col.isTrigger = false;
        }
    }
}
